# boss-standard-workflow

./: .gitignore  BOSS_handle_SR  Makefile  README  check_already_testing.py  check_has_relevant_changelog.py  check_has_valid_repo.py  check_is_from_devel.py  check_mentions_bug.py  check_multiple_destinations.py  check_no_changes.py  check_package_built_at_source.py  check_package_is_complete.py  check_spec.py  check_submitter_maintainer.py  check_valid_changes.py  check_yaml_matches_spec.py  get_submitter_email.py  multiple_destinations.py  package_complete.py  package_successful.py  platform_setup  qcheck_template.py  submitter_email.py  swf_enable  target_repo.py
conf/: autodoc_deploy.conf  autoks_deploy.conf  bugzilla.conf  check_mentions_bug.conf  check_yaml_matches_spec.conf  defineimage.conf  getbuildlog.conf  (+12 more)
modules/: repo_diff.py  setup.cfg  setup.py
modules/boss/: checks.py  lab.py  obs.py  rpm.py  spec.py
modules/boss/bz/: base.py  config.py  rest.py  xmlrpc.py
modules/ots/: ots_connector.py  test_ots_connector.py
modules/qarep/: upload.py
modules/qareports/: upload.py
modules/rpmUtils/: __init__.py  arch.py  miscutils.py  oldUtils.py  transaction.py  updates.py
modules/yum/: Errors.py  __init__.py  callbacks.py  comps.py  config.py  constants.py  depsolve.py  failover.py  history.py  i18n.py  logginglevels.py  mdparser.py  metalink.py  misc.py  packageSack.py  packages.py  parser.py  pgpmsg.py  pkgtag_db.py  plugins.py  repoMDObject.py  repos.py  rpmsack.py  rpmtrans.py  sqlitesack.py  sqlutils.py  transactioninfo.py  update_md.py  yumRepo.py
(+305 files in other folders)
