# see https://packaging.python.org/guides/distributing-packages-using-setuptools/
    #!/usr/bin/python2
[metadata]
name = boss-common
version = 0.6.0
description = Helper modules for BOSS participants'
url = http://meego.gitorious.org/meego-infrastructure-tools/boss-standard-workflow
author = David Greaves
author_email = david.greaves@jolla.com
license = GPLv2
classifiers =
    Development Status :: 1 - Production
    License :: OSI Approved :: GPLv2 License
    Natural Language :: English
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3.6
project_urls =
    Documentation = https://
    Source = https://
    Tracker = https://

[options]
zip_safe = False
packages = find:
#  package_dir = {'ots' : 'ots' , 'boss' : 'boss', 'boss.bz' : 'boss/bz'},
#  py_modules = ['repo_diff']
platforms = any
include_package_data = True
python_requires = >=3.6

[aliases]
test=pytest

[options.extras_require]
test =
    pytest >= 6.2.2
    #    pycodestyle
    #	 pytest-cov
    flake8
    pylint
    isort
    mypy
all =
    %(test)s
